--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.8.6",
+    "firebase": "^9.17.2",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-safe-area-context": "^4.5.0",
